new feature added in newBranch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+
+	<h1>This feature is added in new branch for assignment </h1>
+        <h1>This feature is added in new Branch</h1>i
+
+
+
+
+
+
+
     <div class="main-container">
         <div class="cloud-image">
             <img src="img/successCloudNew.svg" />
